@@ -2,8 +2,10 @@ package com.csse3200.game.areas.mapConfig;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
+/**
+ *
+ */
 public class LevelConfig {
     public List<GameAreaConfig> gameAreas;
 
@@ -11,7 +13,7 @@ public class LevelConfig {
         return gameAreas.stream()
                  .flatMap(gameAreaConfig -> Arrays.stream(gameAreaConfig.getEntityTextures()))
                  .distinct()
-                 .collect(Collectors.toList())
+                 .toList()
                  .toArray(new String[]{});
     }
 }
